--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -21,7 +21,7 @@ texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
 binary_format/embed_pck=false
 custom_template/release="../godot.windows.opt.64.exe"
-custom_template/debug=""
+custom_template/debug="../godot.windows.opt.debug.64.exe"
 codesign/enable=false
 codesign/identity_type=0
 codesign/identity=""
